--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 certifi==2017.11.5
 chardet==3.0.4
 click==6.7
-Flask==0.12.2
+flask>=1.0.0
 idna==2.6
 itsdangerous==0.24
-Jinja2==2.10
+Jinja2>=2.10.1
 MarkupSafe==1.0
 pytz==2017.3
-requests==2.18.4
-urllib3==1.22
-Werkzeug==0.12.2
+requests>=2.20.0
+urllib3>=1.24.2
+werkzeug>=0.15.3
